force-app/main/default/objects/KimbleOne__InterfaceType__c/KimbleOne__InterfaceType__c.object-meta.xml
<CustomObject>
    <customHelpPage>KimbleOne__ConfigGuide</customHelpPage>
    <label>Interface Type</label>
    <nameField>
        <label>Interface Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Interface Types</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>