force-app/main/default/objects/KimbleOne__InterfaceType__c/fields/KimbleOne__AllowUserGeneratedOutput__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__AllowUserGeneratedOutput__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow User Generated Output</label>
    <type>Checkbox</type>
</CustomField>