force-app/main/default/objects/KimbleOne__InterfaceType__c/fields/KimbleOne__BatchSize__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__BatchSize__c</fullName>
    <label>BatchSize</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>