force-app/main/default/objects/KimbleOne__InterfaceType__c/fields/KimbleOne__MapContextType__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__MapContextType__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Map Context Type</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>KimbleOne__ReferenceData__c.KimbleOne__Domain__c</field>
            <operation>equals</operation>
            <value>ContextType</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>KimbleOne__ReferenceData__c</referenceTo>
    <relationshipLabel>Interface Types</relationshipLabel>
    <relationshipName>InterfaceTypes</relationshipName>
    <type>Lookup</type>
</CustomField>